--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "sqlite3": "^5.1.7",
+    "unzipper": "^0.12.3"
   }
 }
